-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
This issue was created by maloo for Bob Glossman <bob.glossman@intel.com>
This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/1d4a3042-f3cc-11e6-8862-5254006e85c2.
The sub-test test_313 failed with the following error:
test failed to respond and timed out
the following panic seen in console log for MDS:
20:34:29:[ 6925.325814] LustreError: 6289:0:(osp_sync.c:571:osp_sync_interpret()) ASSERTION( req->rq_transno == 0 || req->rq_import_generation < imp->imp_generation ) failed: transno 21474848133, rc -5, gen: req 1, imp 1 20:34:29:[ 6925.334095] LustreError: 6289:0:(osp_sync.c:571:osp_sync_interpret()) LBUG 20:34:29:[ 6925.337147] Pid: 6289, comm: ptlrpcd_00_00 20:34:29:[ 6925.338786] 20:34:29:[ 6925.338786] Call Trace: 20:34:29:[ 6925.341582] [<ffffffffa06e77f3>] libcfs_debug_dumpstack+0x53/0x80 [libcfs] 20:34:29:[ 6925.343382] [<ffffffffa06e7861>] lbug_with_loc+0x41/0xb0 [libcfs] 20:34:29:[ 6925.345155] [<ffffffffa0fb99b3>] osp_sync_interpret+0x363/0x520 [osp] 20:34:29:[ 6925.347107] [<ffffffffa0a490b5>] ptlrpc_check_set.part.23+0x425/0x1dd0 [ptlrpc] 20:34:29:[ 6925.348959] [<ffffffffa0a4aabb>] ptlrpc_check_set+0x5b/0xe0 [ptlrpc] 20:34:29:[ 6925.350719] [<ffffffffa0a76b8b>] ptlrpcd_check+0x4db/0x5d0 [ptlrpc] 20:34:29:[ 6925.352418] [<ffffffffa0a76f3b>] ptlrpcd+0x2bb/0x560 [ptlrpc] 20:34:29:[ 6925.354016] [<ffffffff810c4fd0>] ? default_wake_function+0x0/0x20 20:34:29:[ 6925.355646] [<ffffffffa0a76c80>] ? ptlrpcd+0x0/0x560 [ptlrpc] 20:34:29:[ 6925.357242] [<ffffffff810b064f>] kthread+0xcf/0xe0 20:34:29:[ 6925.358743] [<ffffffff810b0580>] ? kthread+0x0/0xe0 20:34:29:[ 6925.360250] [<ffffffff81696958>] ret_from_fork+0x58/0x90 20:34:29:[ 6925.361794] [<ffffffff810b0580>] ? kthread+0x0/0xe0 20:34:29:[ 6925.363307] 20:34:29:[ 6925.364557] Kernel panic - not syncing: LBUG 20:34:29:[ 6925.365550] CPU: 0 PID: 6289 Comm: ptlrpcd_00_00 Tainted: G OE ------------ 3.10.0-514.6.1.el7_lustre.x86_64 #1 20:34:29:[ 6925.365550] Hardware name: Red Hat KVM, BIOS 0.5.1 01/01/2007 20:34:29:[ 6925.365550] ffffffffa0705d8c 00000000cf1e6ef2 ffff880077eb7bc8 ffffffff816863f8 20:34:29:[ 6925.365550] ffff880077eb7c48 ffffffff8167f823 ffffffff00000008 ffff880077eb7c58 20:34:29:[ 6925.365550] ffff880077eb7bf8 00000000cf1e6ef2 00000000cf1e6ef2 ffff88007fc0f838 20:34:29:[ 6925.365550] Call Trace: 20:34:29:[ 6925.365550] [<ffffffff816863f8>] dump_stack+0x19/0x1b 20:34:29:[ 6925.365550] [<ffffffff8167f823>] panic+0xe3/0x1f2 20:34:29:[ 6925.365550] [<ffffffffa06e7879>] lbug_with_loc+0x59/0xb0 [libcfs] 20:34:29:[ 6925.365550] [<ffffffffa0fb99b3>] osp_sync_interpret+0x363/0x520 [osp] 20:34:29:[ 6925.365550] [<ffffffffa0a490b5>] ptlrpc_check_set.part.23+0x425/0x1dd0 [ptlrpc] 20:34:29:[ 6925.365550] [<ffffffffa0a4aabb>] ptlrpc_check_set+0x5b/0xe0 [ptlrpc] 20:34:29:[ 6925.365550] [<ffffffffa0a76b8b>] ptlrpcd_check+0x4db/0x5d0 [ptlrpc] 20:34:29:[ 6925.365550] [<ffffffffa0a76f3b>] ptlrpcd+0x2bb/0x560 [ptlrpc] 20:34:29:[ 6925.365550] [<ffffffff810c4fd0>] ? wake_up_state+0x20/0x20 20:34:29:[ 6925.365550] [<ffffffffa0a76c80>] ? ptlrpcd_check+0x5d0/0x5d0 [ptlrpc] 20:34:29:[ 6925.365550] [<ffffffff810b064f>] kthread+0xcf/0xe0 20:34:29:[ 6925.365550] [<ffffffff810b0580>] ? kthread_create_on_node+0x140/0x140 20:34:29:[ 6925.365550] [<ffffffff81696958>] ret_from_fork+0x58/0x90 20:34:29:[ 6925.365550] [<ffffffff810b0580>] ? kthread_create_on_node+0x140/0x140
Info required for matching: sanity 313
- is duplicated by
-
LU-10430 LBUG osp_sync.c:578:osp_sync_interpret
-
- Open
-
-
LU-9130 sanity: test_313 timeout
-
- Resolved
-
- is related to
-
LU-5629 osp_sync_interpret() ASSERTION( rc || req->rq_transno ) failed
-
- Resolved
-
- is related to
-
LU-8411 Fix Lustre filesystem corruption when updating journal superblock fails
-
- Resolved
-